--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
 	"name": "reactjs",
+	"author": {
+		"name": "POLY",
+		"github":"athayanaufalbrasta"
+	},
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
